tests/invalid_scir_h/invalid_boundary_missing_capabilities.scirh
module invalid.boundary_missing_capabilities
import sym foreign_api_ping python:foreign_api.ping

fn ping -> opaque<ForeignResult> !opaque
  return foreign_api_ping()
